@@ -11,12 +11,12 @@ import javax.servlet.jsp.tagext.TagExtraInfo;
 import javax.servlet.jsp.tagext.TagSupport;
 import javax.servlet.jsp.tagext.VariableInfo;
 
-import org.apache.commons.lang.StringUtils;
+import net.sf.mmapps.commons.util.StringUtil;
 
 import com.finalist.cmsc.beans.om.NavigationItem;
 import com.finalist.cmsc.mmbase.ResourcesUtil;
+import com.finalist.cmsc.navigation.ServerUtil;
 import com.finalist.cmsc.services.sitemanagement.SiteManagement;
-import com.finalist.cmsc.util.ServerUtil;
 
 /**
  * Supporting class for the <CODE>actionURL</CODE> and <CODE>renderURL</CODE>
@@ -65,7 +65,7 @@ public abstract class BasicURLTag extends TagSupport {
       // make sure we start with an unset url variable;
       setUrl(null);
 
-      if (StringUtils.isEmpty(page) && StringUtils.isEmpty(window) && StringUtils.isNotEmpty(elementId)) {
+      if (StringUtil.isEmpty(page) && StringUtil.isEmpty(window) && !StringUtil.isEmpty(elementId)) {
          contenturl = ResourcesUtil.getServletPathWithAssociation("content", "/content/*", elementId, null);
          return EVAL_PAGE;
       }
@@ -164,23 +164,23 @@ public abstract class BasicURLTag extends TagSupport {
          link = SiteManagement.getPath(item, !ServerUtil.useServerName());
       }
       else {
-         //Throw error, should use this function with full path!
-         throw new IllegalArgumentException("item == null; getLink should be called with full page path!");
+         link = page;
+         //Throw error in from CMSC 1.6: illegal argument exception, should use this with full path
       }
 
       return link;
    }
 
-   
    public String getHost() {
       String host = null;
       if (ServerUtil.useServerName()) {
          NavigationItem item = SiteManagement.convertToNavigationItem(page);
-         host = SiteManagement.getSite(item);
+         if (item != null) {
+            host = SiteManagement.getSite(item);
+         }
       }
       return host;
    }
-
 
    /**
     * Returns the portletMode.
@@ -254,7 +254,7 @@ public abstract class BasicURLTag extends TagSupport {
     */
    public void setSecure(String secure) {
       this.secure = secure;
-      this.secureBoolean = Boolean.valueOf(secure);
+      this.secureBoolean = new Boolean(secure);
    }
 
 
